# ttyper

./: .gitignore  Cargo.toml
src/: config.rs  main.rs
src/test/: mod.rs
