[package]
name = "ttyper"
description = "Terminal-based typing test."
version = "1.2.1"
readme = "README.md"
repository = "https://github.com/max-niederman/ttyper.git"
homepage = "https://github.com/max-niederman/ttyper"
license = "MIT"
authors = ["Max Niederman <max@maxniederman.com>"]
edition = "2021"

[dependencies]
structopt = "^0.3"
dirs = "^5.0"
crossterm = "^0.26"
rust-embed = "^6.4"
toml = "^0.7"
async-openai = "0.17.1"
tokio = { version = "1.25.0", features = ["full"] }
rascii_art = { git = "https://github.com/KoBruhh/RASCII.git" }
anyhow = "^1.0"
formatx = "^0.2"

[dependencies.ratatui]
version = "^0.21"

[dependencies.rand]
version = "^0.8"
features = ["alloc"]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[build-dependencies]
dirs = "^5.0"
